# docker-images

./: .dockerignore  .editorconfig  README.md  generate-matrix.py  pyproject.toml
.github/workflows/: main.yml
buster/: Dockerfile
images/latex/: info.json
images/latex/bookworm-slim/: Dockerfile
images/latex/buster-slim/: Dockerfile
images/liggghts/: info.json
images/liggghts/ubuntu-20.04/: Dockerfile
images/playground/: info.json
images/playground/alpine/: Dockerfile
images/playground/arch/: Dockerfile
images/playground/archlinux/: Dockerfile
images/playground/bookworm/: Dockerfile
images/playground/buster/: Dockerfile
images/playground/homebrew-ubuntu-20.04/: Dockerfile
images/playground/ubuntu-20.04/: Dockerfile
latex/buster-slim/: Dockerfile
playground/buster/: Dockerfile
ubuntu/: Dockerfile
