[tool.poetry]
name = "docker-images"
version = "0.1.0"
description = ""
authors = ["Nihaal Sangha <me@niha.al>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.11"

[tool.poetry.dev-dependencies]
black = "*"
isort = "^5"
flake8 = "^6"

[tool.black]
line-length = 120
target-version = ['py311']
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.vscode
    | \.idea
    | _build
    | buck-out
    | build
    | dist
  )/
  | src
  | book
)
'''

[tool.isort]
line_length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
